# robot-serving

./: #package.xml#  .cproject  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  README.md  Vision_Processor_debug.cpp  cmake_install.cmake  config  interaction_log.txt  log.txt  movement_cpp.txt  movement_log.txt  out.txt  package.xml  segmentation_results.txt  segmentation_results.txt~  vision_log.txt
Debug/: makefile  sources.mk
_to_sort/: testing.py  trajectory.py  trajectory_executor.py
_to_sort/ProMPs/: setup.py
catkin_generated/: generate_cached_setup.py  ordered_paths.cmake  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  robot_serving-msg-extras.cmake.installspace.in  setup_cached.sh
catkin_generated/installspace/: _setup_util.py  robot_serving-msg-paths.cmake  robot_serving.pc  robot_servingConfig.cmake
cmake/: robot_serving-genmsg-context.py  robot_serving-genmsg.cmake
data/: calib_data.txt
devel/: .catkin  .rosinstall  setup.sh
execute_scripts/: interaction_server_execute.sh  legible_trajectory_decision_execute.sh  mixed_trajectory_decision_execute.sh  predictable_trajectory_decision_execute.sh  variable_def.sh  vision_processing_execute.sh
gtest/: CTestTestfile.cmake  Makefile
include/: Color_Segment.h  Color_Segmentation.h
msg/: Cups.msg  FollowBehaviour.msg  Follow_mode.msg  ManageExpression.msg  PMPPoint.msg  PMPTraj.msg  PerceivedFace.msg  SpeechCues.msg  screen_mode.msg
src/Movement/: ComputeJointSequenceCallback.m  Trajectory.py  baxter_connection.py  baxter_display_image.py  baxter_movement_server.py  head_tracking.py  legibleMovementDecision.m  manager_mixed_trajectory.cpp  manager_single_trajectory.cpp  mixedMovementDecision.m  obtainMovementSequence.m  predictiveMovementDecision.m  run_copromp.py  testing.py  train_data.txt  train_data.txt~
src/Social/: PTTS.py  social_interaction.py
src/Vision/: color_segmentation_custumization.py  image_converter.cpp  video_receiver.cpp  vision_processing_color_segmentation.cpp
src/test_src/: #run_copromp.py#  baxter_connection_stub.py  image_converter.cpp  run_copromp.py~  testing_single_trajectory_decision.cpp  trajectory_decision.cpp
srv/: .RobotMovementSendTrajectory.srv.kate-swp  Movement.srv  RobotMovementCancelTrajectory.srv  RobotMovementFeedback.srv  RobotMovementSendTrajectory.srv
test_src/: trajectory_decision.cpp  video_receiver.cpp
trajectory_recording/: cup_filling_task_recording.py  cup_identification_recording.cpp  legible_traj10.mat  legible_traj12.mat  legible_traj13.mat  legible_traj17.mat  legible_traj18.mat  legible_traj19.mat  legible_traj4.mat  legible_traj6.mat  legible_traj8.mat  legible_traj9.mat  predict_traj11.mat  predict_traj13.mat  predict_traj14.mat  predict_traj15.mat  predict_traj17.mat  predict_traj19.mat  predict_traj20.mat  predict_traj4.mat  predict_traj6.mat  predict_traj7.mat  predict_traj8.mat  raw_predict_21.mat  raw_predict_22.mat  raw_predict_23.mat  raw_predict_24.mat  raw_predict_25.mat  raw_predict_26.mat  raw_predict_27.mat  raw_predict_28.mat  raw_predict_29.mat  raw_predict_30.mat  raw_predict_31.mat  raw_predict_32.mat  raw_predict_33.mat  raw_predict_34.mat  raw_predict_35.mat  raw_predict_36.mat  raw_predict_37.mat  (+6 more)
trajectory_recording/.ipynb_checkpoints/: trajectory_analysis_and_cleaning-checkpoint.ipynb
trajectory_recording/clean_trajectories/: legible_traj1.mat  legible_traj10.mat  legible_traj11.mat  legible_traj12.mat  legible_traj13.mat  legible_traj14.mat  legible_traj15.mat  legible_traj16.mat  legible_traj17.mat  legible_traj18.mat  legible_traj19.mat  legible_traj2.mat  legible_traj20.mat  legible_traj3.mat  legible_traj4.mat  legible_traj5.mat  legible_traj6.mat  legible_traj7.mat  legible_traj8.mat  legible_traj9.mat  predict_traj1.mat  predict_traj10.mat  predict_traj11.mat  predict_traj12.mat  predict_traj13.mat  predict_traj14.mat  predict_traj15.mat  predict_traj16.mat  predict_traj17.mat  predict_traj18.mat  predict_traj19.mat  predict_traj2.mat  predict_traj20.mat  predict_traj3.mat  predict_traj4.mat  predict_traj5.mat  predict_traj6.mat  predict_traj7.mat  predict_traj8.mat  predict_traj9.mat
trajectory_recording/clean_trajectories_orig/: legible_traj10.mat  legible_traj11.mat  legible_traj14.mat  legible_traj16.mat  legible_traj17.mat  legible_traj18.mat  legible_traj19.mat  legible_traj2.mat  legible_traj20.mat  legible_traj3.mat  legible_traj4.mat  legible_traj5.mat  legible_traj6.mat  legible_traj8.mat  predict_traj1.mat  predict_traj13.mat  predict_traj15.mat  predict_traj16.mat  predict_traj17.mat  predict_traj18.mat  predict_traj20.mat  predict_traj3.mat  predict_traj4.mat  predict_traj6.mat  predict_traj7.mat
trajectory_recording/raw_trajectories/: raw_legible_traj1.mat  raw_legible_traj10.mat  raw_legible_traj11.mat  raw_legible_traj12.mat  raw_legible_traj13.mat  raw_legible_traj14.mat  raw_legible_traj15.mat  raw_legible_traj16.mat  raw_legible_traj17.mat  raw_legible_traj18.mat  raw_legible_traj19.mat  raw_legible_traj2.mat  raw_legible_traj20.mat  raw_legible_traj3.mat  raw_legible_traj4.mat  raw_legible_traj5.mat  raw_legible_traj6.mat  raw_legible_traj7.mat  raw_legible_traj8.mat  raw_legible_traj9.mat  raw_predict_traj1.mat  raw_predict_traj10.mat  raw_predict_traj11.mat  raw_predict_traj12.mat  raw_predict_traj13.mat  raw_predict_traj14.mat  raw_predict_traj15.mat  raw_predict_traj16.mat  raw_predict_traj17.mat  raw_predict_traj18.mat  raw_predict_traj19.mat  raw_predict_traj2.mat  raw_predict_traj20.mat  raw_predict_traj3.mat  raw_predict_traj4.mat  raw_predict_traj5.mat  raw_predict_traj6.mat  raw_predict_traj7.mat  raw_predict_traj8.mat  raw_predict_traj9.mat
trajectory_recording/raw_trajectories_orig/: raw_legible_traj11.mat  raw_legible_traj14.mat  raw_legible_traj15.mat  raw_legible_traj2.mat  raw_legible_traj20.mat  raw_legible_traj3.mat  raw_legible_traj5.mat  raw_legible_traj7.mat  raw_predict_traj12.mat  raw_predict_traj16.mat  raw_predict_traj17.mat  raw_predict_traj18.mat  raw_predict_traj2.mat  (+2 more)
(+107 files in other folders)
